commit 2.4.2018 2 error handling + textova cast

--- a/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/GraphView_partial.cshtml
+++ b/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/GraphView_partial.cshtml
@@ -141,12 +141,19 @@
             type: "POST",
             contentType: "application/json",
             data: data,
-            error: OnError,
             success: function (partialView) {
                 $('#graphView_Partial_Id').html(partialView);
                 unblockUI();
+            },
+            error: function (xhr, data) {
+                toastr.error(xhr.statusText, "Error", {
+                    "timeOut": "0",
+                    "extendedTimeout": "0"
+                });
+                unblockUI();
             }
         });
+        return false;
     }
 
     function findCommunities() {
@@ -156,12 +163,19 @@
             type: "POST",
             contentType: "application/json",
             data: JSON.stringify(@Html.Raw(Json.Encode(@Model))),
-            error: OnError,
-            success: function (partialView) {
+            success: function(partialView) {
                 $('#graphView_Partial_Id').html(partialView);
+                unblockUI();
+            },
+            error: function (xhr, data) {
+                toastr.error(xhr.statusText, "Error", {
+                    "timeOut": "0",
+                    "extendedTimeout": "0"
+                });
                 unblockUI();
             }
         });
+        return false;
     }
 
     function findRoles() {
@@ -172,72 +186,82 @@
             type: "POST",
             contentType: "application/json",
             data: JSON.stringify(@Html.Raw(Json.Encode(@Model))),
-            datatype: 'json',
             success: function (partialView) {
-                $('#graphView_Partial_Id').html(partialView);
+
+                    $('#graphView_Partial_Id').html(partialView);
+                    unblockUI();
+            },
+            error: function(xhr, data) {
+                toastr.error(xhr.statusText, "Error", {
+                    "timeOut": "0",
+                    "extendedTimeout": "0"
+                });
                 unblockUI();
             }
         });
+        return false;
     }
 
     function GraphVis() {
-        var nodes = @Html.Raw(Json.Encode(Model.GraphDto.nodes));
-        var edges = @Html.Raw(Json.Encode(Model.GraphDto.edges));
+            var nodes = @Html.Raw(Json.Encode(Model.GraphDto.nodes));
+            var edges = @Html.Raw(Json.Encode(Model.GraphDto.edges));
 
-        // create a network
-        var container = document.getElementById('mynetwork');
+            // create a network
+            var container = document.getElementById('mynetwork');
 
-        // provide the data in the vis format
-        var data = {
-            nodes: nodes,
-            edges: edges
-        };
-        var options = {
-            nodes: {
-                shape: 'dot',
-                size: 10,
-                borderWidth: 1
-            },
-            interaction: { hover: true },
-            layout: {
-                improvedLayout: false
-            }
-            ,physics: {
-                forceAtlas2Based: {
-                    gravitationalConstant: -26,
-                    centralGravity: 0.005,
-                    springLength: 230,
-                    springConstant: 0.18
+            // provide the data in the vis format
+            var data = {
+                nodes: nodes,
+                edges: edges
+            };
+            var options = {
+                nodes: {
+                    shape: 'dot',
+                    size: 10,
+                    borderWidth: 1
                 },
-                maxVelocity: 146,
-                solver: 'forceAtlas2Based',
-                timestep: 0.35,
-                stabilization: {
-                    enabled:true,
-                    iterations:2000,
-                    updateInterval:25
+                interaction: { hover: true },
+                layout: {
+                    improvedLayout: false
+                },
+                physics: {
+                    forceAtlas2Based: {
+                        gravitationalConstant: -26,
+                        centralGravity: 0.005,
+                        springLength: 230,
+                        springConstant: 0.18
+                    },
+                    maxVelocity: 146,
+                    solver: 'forceAtlas2Based',
+                    timestep: 0.35,
+                    stabilization: {
+                        enabled: true,
+                        iterations: 2000,
+                        updateInterval: 25
+                    }
                 }
-            }
-    };
-    // initializing network
-        var network = new vis.Network(container, data, options);
+            };
+            // initializing network
+            var network = new vis.Network(container, data, options);
 
-        network.on("stabilizationProgress", function (params) {
-            var maxWidth = 496;
-            var minWidth = 20;
-            var widthFactor = params.iterations / params.total;
-            var width = Math.max(minWidth, maxWidth * widthFactor);
+            network.on("stabilizationProgress",
+                function(params) {
+                    var maxWidth = 496;
+                    var minWidth = 20;
+                    var widthFactor = params.iterations / params.total;
+                    var width = Math.max(minWidth, maxWidth * widthFactor);
 
-            document.getElementById('bar').style.width = width + 'px';
-            document.getElementById('text').innerHTML = Math.round(widthFactor * 100) + '%';
-        });
-        network.once("stabilizationIterationsDone", function () {
-            document.getElementById('text').innerHTML = '100%';
-            document.getElementById('bar').style.width = '496px';
-            document.getElementById('loadingBar').style.opacity = 0;
-            // really clean the dom element
-            setTimeout(function () { document.getElementById('loadingBar').style.display = 'none'; }, 500);
-        });
-    }
+                    document.getElementById('bar').style.width = width + 'px';
+                    document.getElementById('text').innerHTML = Math.round(widthFactor * 100) + '%';
+                });
+            network.once("stabilizationIterationsDone",
+                function() {
+                    document.getElementById('text').innerHTML = '100%';
+                    document.getElementById('bar').style.width = '496px';
+                    document.getElementById('loadingBar').style.opacity = 0;
+                    // really clean the dom element
+                    setTimeout(function() { document.getElementById('loadingBar').style.display = 'none'; }, 500);
+                });
+        }
 </script>
 
