--- a/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
+++ b/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/Content/daterangepicker.css" type="text/css">
     <link rel="stylesheet" href="~/Content/toastr.css" type="text/css">
     <link rel="stylesheet" href="~/Content/vis/vis-network.min.css" type="text/css" />
+    <link rel="stylesheet" href="~/Content/vis/vis-timeline-graph2d.min.css" type="text/css" />
     <link rel="stylesheet" href="~/Content/fontawesome/fontawesome-all.css" type="text/css">
     <link rel="stylesheet" href="~/Content/custom.css" type="text/css">
     <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/themes/blitzer/jquery-ui.css"  type="text/css" />
@@ -18,6 +19,7 @@
 
     @*scripts*@
     <script src="~/Scripts/vis/vis.js"></script>
+    <script src="~/Scripts/vis/vis-timeline-graph2d.min.js"></script>
     <script src="~/Scripts/vis/vis-network.min.js"></script>
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.js" type="text/javascript"></script>
