--- a/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
+++ b/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
@@ -19,8 +19,6 @@
 
     @*scripts*@
     <script src="~/Scripts/vis/vis.js"></script>
-    <script src="~/Scripts/vis/vis-timeline-graph2d.min.js"></script>
-    <script src="~/Scripts/vis/vis-network.min.js"></script>
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.js" type="text/javascript"></script>
     <script src="~/Scripts/moment.js"></script>
@@ -32,6 +30,7 @@
     <script src="~/Scripts/daterangepicker.js"></script>
     <script src="~/Scripts/custom.js"></script>
     <script src="~/Scripts/toastr.js"></script>
+   <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 </head>
 <body>
     <nav>
